--- a/output/galleries/demo/index.html
+++ b/output/galleries/demo/index.html
@@ -8,12 +8,7 @@ article: http://ogp.me/ns/article#
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Nikola Tesla | actin.io</title>
 
-                <link href="../../assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-        <link href="../../assets/css/rst.css" rel="stylesheet" type="text/css">
-        <link href="../../assets/css/code.css" rel="stylesheet" type="text/css">
-        <link href="../../assets/css/colorbox.css" rel="stylesheet" type="text/css">
-        <link href="../../assets/css/theme.css" rel="stylesheet" type="text/css">
-            <link href="../../assets/css/custom.css" rel="stylesheet" type="text/css">
+                <link href="../../assets/css/all-nocdn.css" rel="stylesheet" type="text/css">
 
                 <link rel="alternate" type="application/rss+xml" title="RSS" href="../../rss.xml">
 
@@ -164,11 +159,7 @@ article: http://ogp.me/ns/article#
     </div>
 </div>
 
-            <script src="../../assets/js/jquery.min.js"></script>
-            <script src="../../assets/js/bootstrap.min.js"></script>
-            <script src="../../assets/js/moment-with-locales.min.js"></script>
-            <script src="../../assets/js/fancydates.js"></script>
-        <script src="../../assets/js/jquery.colorbox-min.js"></script>
+            <script src="../../assets/js/all-nocdn.js"></script>
     
 
     <script>$('a.image-reference:not(.islink)').colorbox({rel:"gal",maxWidth:"100%",maxHeight:"100%",scalePhotos:true});</script>
@@ -180,7 +171,7 @@ article: http://ogp.me/ns/article#
     <!-- end fancy dates -->
 <script src="../../assets/js/flowr.plugin.js"></script>
 <script>
-jsonContent = [{"url": "tesla2_lg.jpg", "size": {"h": 180, "w": 121}, "title": "Tesla2 lg", "url_thumb": "tesla2_lg.thumbnail.jpg"}, {"url": "tesla4_lg.jpg", "size": {"h": 180, "w": 128}, "title": "Tesla4 lg", "url_thumb": "tesla4_lg.thumbnail.jpg"}, {"url": "tesla_conducts_lg.jpg", "size": {"h": 180, "w": 128}, "title": "Tesla conducts lg", "url_thumb": "tesla_conducts_lg.thumbnail.jpg"}, {"url": "tesla_lightning1_lg.jpg", "size": {"h": 129, "w": 180}, "title": "Tesla lightning1 lg", "url_thumb": "tesla_lightning1_lg.thumbnail.jpg"}, {"url": "tesla_lightning2_lg.jpg", "size": {"h": 131, "w": 180}, "title": "Tesla lightning2 lg", "url_thumb": "tesla_lightning2_lg.thumbnail.jpg"}, {"url": "tesla_tower1_lg.jpg", "size": {"h": 125, "w": 180}, "title": "Tesla tower1 lg", "url_thumb": "tesla_tower1_lg.thumbnail.jpg"}];
+jsonContent = [{"size": {"h": 180, "w": 121}, "url_thumb": "tesla2_lg.thumbnail.jpg", "title": "Tesla2 lg", "url": "tesla2_lg.jpg"}, {"size": {"h": 180, "w": 128}, "url_thumb": "tesla4_lg.thumbnail.jpg", "title": "Tesla4 lg", "url": "tesla4_lg.jpg"}, {"size": {"h": 180, "w": 128}, "url_thumb": "tesla_conducts_lg.thumbnail.jpg", "title": "Tesla conducts lg", "url": "tesla_conducts_lg.jpg"}, {"size": {"h": 129, "w": 180}, "url_thumb": "tesla_lightning1_lg.thumbnail.jpg", "title": "Tesla lightning1 lg", "url": "tesla_lightning1_lg.jpg"}, {"size": {"h": 131, "w": 180}, "url_thumb": "tesla_lightning2_lg.thumbnail.jpg", "title": "Tesla lightning2 lg", "url": "tesla_lightning2_lg.jpg"}, {"size": {"h": 125, "w": 180}, "url_thumb": "tesla_tower1_lg.thumbnail.jpg", "title": "Tesla tower1 lg", "url": "tesla_tower1_lg.jpg"}];
 $("#gallery_container").flowr({
         data : jsonContent,
         height : 180*.6,
