--- a/output/stories/charts.html
+++ b/output/stories/charts.html
@@ -8,12 +8,7 @@ article: http://ogp.me/ns/article#
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Charts | actin.io</title>
 
-                <link href="../assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-        <link href="../assets/css/rst.css" rel="stylesheet" type="text/css">
-        <link href="../assets/css/code.css" rel="stylesheet" type="text/css">
-        <link href="../assets/css/colorbox.css" rel="stylesheet" type="text/css">
-        <link href="../assets/css/theme.css" rel="stylesheet" type="text/css">
-            <link href="../assets/css/custom.css" rel="stylesheet" type="text/css">
+                <link href="../assets/css/all-nocdn.css" rel="stylesheet" type="text/css">
 
                 <link rel="alternate" type="application/rss+xml" title="RSS" href="../rss.xml">
 
@@ -121,19 +116,19 @@ with little effort, and i's even semi-interactive (hover your pointer over the l
     <div>
 <p>If you are using reStructuredText and install pygal, Nikola has support for rather nice charts
 with little effort, and i's even semi-interactive (hover your pointer over the legend!):</p>
-<pre class="code rest"><a name="rest_code_2790945fa0714d56995a3648aceea612-1"></a><span class="p">..</span> <span class="ow">chart</span><span class="p">::</span> StackedLine
-<a name="rest_code_2790945fa0714d56995a3648aceea612-2"></a>   <span class="nc">:title:</span> <span class="nf">'Browser usage evolution (in %)'</span>
-<a name="rest_code_2790945fa0714d56995a3648aceea612-3"></a>   <span class="nc">:fill:</span> <span class="nf">True</span>
-<a name="rest_code_2790945fa0714d56995a3648aceea612-4"></a>   <span class="nc">:x_labels:</span> <span class="nf">['2002','2003','2004','2005','2006','2007','2008','2009','2010','2011','2012']</span>
-<a name="rest_code_2790945fa0714d56995a3648aceea612-5"></a>   <span class="nc">:width:</span> <span class="nf">600</span>
-<a name="rest_code_2790945fa0714d56995a3648aceea612-6"></a>   <span class="nc">:height:</span> <span class="nf">400</span>
-<a name="rest_code_2790945fa0714d56995a3648aceea612-7"></a>   <span class="nc">:explicit_size:</span> <span class="nf">True</span>
-<a name="rest_code_2790945fa0714d56995a3648aceea612-8"></a>   <span class="nc">:style:</span> <span class="nf">BlueStyle</span>
-<a name="rest_code_2790945fa0714d56995a3648aceea612-9"></a>
-<a name="rest_code_2790945fa0714d56995a3648aceea612-10"></a>   ('Others',  [14.2, 15.4, 15.3,  8.9,    9, 10.4,  8.9,  5.8,  6.7,  6.8,  7.5])
-<a name="rest_code_2790945fa0714d56995a3648aceea612-11"></a>   ('IE',      [85.8, 84.6, 84.7, 74.5,   66, 58.6, 54.7, 44.8, 36.2, 26.6, 20.1])
-<a name="rest_code_2790945fa0714d56995a3648aceea612-12"></a>   ('Firefox', [None, None, None, 16.6,   25,   31, 36.4, 45.5, 46.3, 42.8, 37.1])
-<a name="rest_code_2790945fa0714d56995a3648aceea612-13"></a>   ('Chrome',  [None, None, None, None, None, None,    0,  3.9, 10.8, 23.8, 35.3])
+<pre class="code rest"><a name="rest_code_88cb2e1f8a314002a03e90c5fc7115f7-1"></a><span class="p">..</span> <span class="ow">chart</span><span class="p">::</span> StackedLine
+<a name="rest_code_88cb2e1f8a314002a03e90c5fc7115f7-2"></a>   <span class="nc">:title:</span> <span class="nf">'Browser usage evolution (in %)'</span>
+<a name="rest_code_88cb2e1f8a314002a03e90c5fc7115f7-3"></a>   <span class="nc">:fill:</span> <span class="nf">True</span>
+<a name="rest_code_88cb2e1f8a314002a03e90c5fc7115f7-4"></a>   <span class="nc">:x_labels:</span> <span class="nf">['2002','2003','2004','2005','2006','2007','2008','2009','2010','2011','2012']</span>
+<a name="rest_code_88cb2e1f8a314002a03e90c5fc7115f7-5"></a>   <span class="nc">:width:</span> <span class="nf">600</span>
+<a name="rest_code_88cb2e1f8a314002a03e90c5fc7115f7-6"></a>   <span class="nc">:height:</span> <span class="nf">400</span>
+<a name="rest_code_88cb2e1f8a314002a03e90c5fc7115f7-7"></a>   <span class="nc">:explicit_size:</span> <span class="nf">True</span>
+<a name="rest_code_88cb2e1f8a314002a03e90c5fc7115f7-8"></a>   <span class="nc">:style:</span> <span class="nf">BlueStyle</span>
+<a name="rest_code_88cb2e1f8a314002a03e90c5fc7115f7-9"></a>
+<a name="rest_code_88cb2e1f8a314002a03e90c5fc7115f7-10"></a>   ('Others',  [14.2, 15.4, 15.3,  8.9,    9, 10.4,  8.9,  5.8,  6.7,  6.8,  7.5])
+<a name="rest_code_88cb2e1f8a314002a03e90c5fc7115f7-11"></a>   ('IE',      [85.8, 84.6, 84.7, 74.5,   66, 58.6, 54.7, 44.8, 36.2, 26.6, 20.1])
+<a name="rest_code_88cb2e1f8a314002a03e90c5fc7115f7-12"></a>   ('Firefox', [None, None, None, 16.6,   25,   31, 36.4, 45.5, 46.3, 42.8, 37.1])
+<a name="rest_code_88cb2e1f8a314002a03e90c5fc7115f7-13"></a>   ('Chrome',  [None, None, None, None, None, None,    0,  3.9, 10.8, 23.8, 35.3])
 </pre>
 <div style="text-align: center;"><div class="text-error">In order to use the Chart directive, you must install the "pygal" Python package.</div></div>
 <p>Here's how it works:</p>
@@ -164,11 +159,7 @@ take this example and tweak stuff.</p>
     </div>
 </div>
 
-            <script src="../assets/js/jquery.min.js"></script>
-            <script src="../assets/js/bootstrap.min.js"></script>
-            <script src="../assets/js/moment-with-locales.min.js"></script>
-            <script src="../assets/js/fancydates.js"></script>
-        <script src="../assets/js/jquery.colorbox-min.js"></script>
+            <script src="../assets/js/all-nocdn.js"></script>
     
 
     <script>$('a.image-reference:not(.islink)').colorbox({rel:"gal",maxWidth:"100%",maxHeight:"100%",scalePhotos:true});</script>
