--- a/output/stories/social_buttons.html
+++ b/output/stories/social_buttons.html
@@ -8,12 +8,7 @@ article: http://ogp.me/ns/article#
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Alternative Social Buttons | actin.io</title>
 
-                <link href="../assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-        <link href="../assets/css/rst.css" rel="stylesheet" type="text/css">
-        <link href="../assets/css/code.css" rel="stylesheet" type="text/css">
-        <link href="../assets/css/colorbox.css" rel="stylesheet" type="text/css">
-        <link href="../assets/css/theme.css" rel="stylesheet" type="text/css">
-            <link href="../assets/css/custom.css" rel="stylesheet" type="text/css">
+                <link href="../assets/css/all-nocdn.css" rel="stylesheet" type="text/css">
 
                 <link rel="alternate" type="application/rss+xml" title="RSS" href="../rss.xml">
 
@@ -162,19 +157,19 @@ By Default, the themes provided with Nikola will add to your pages a "slide in" 
 <h2><a class="toc-backref" href="social_buttons.html#id1">The Default</a></h2>
 <p>By Default, the themes provided with Nikola will add to your pages a "slide in" widget at
 the bottom right of the page, provided by Addthis. This is the HTML code for that:</p>
-<pre class="code html"><a name="rest_code_f631ba0b6b484feaad9cabcf9a37edb2-1"></a><span class="c">&lt;!-- Social buttons --&gt;</span>
-<a name="rest_code_f631ba0b6b484feaad9cabcf9a37edb2-2"></a><span class="nt">&lt;div</span> <span class="na">id=</span><span class="s">"addthisbox"</span> <span class="na">class=</span><span class="s">"addthis_toolbox addthis_peekaboo_style</span>
-<a name="rest_code_f631ba0b6b484feaad9cabcf9a37edb2-3"></a><span class="s">    addthis_default_style addthis_label_style addthis_32x32_style"</span><span class="nt">&gt;</span>
-<a name="rest_code_f631ba0b6b484feaad9cabcf9a37edb2-4"></a><span class="nt">&lt;a</span> <span class="na">class=</span><span class="s">"addthis_button_more"</span><span class="nt">&gt;</span>Share<span class="nt">&lt;/a&gt;</span>
-<a name="rest_code_f631ba0b6b484feaad9cabcf9a37edb2-5"></a><span class="nt">&lt;ul&gt;&lt;li&gt;&lt;a</span> <span class="na">class=</span><span class="s">"addthis_button_facebook"</span><span class="nt">&gt;&lt;/a&gt;</span>
-<a name="rest_code_f631ba0b6b484feaad9cabcf9a37edb2-6"></a><span class="nt">&lt;li&gt;&lt;a</span> <span class="na">class=</span><span class="s">"addthis_button_google_plusone_share"</span><span class="nt">&gt;&lt;/a&gt;</span>
-<a name="rest_code_f631ba0b6b484feaad9cabcf9a37edb2-7"></a><span class="nt">&lt;li&gt;&lt;a</span> <span class="na">class=</span><span class="s">"addthis_button_linkedin"</span><span class="nt">&gt;&lt;/a&gt;</span>
-<a name="rest_code_f631ba0b6b484feaad9cabcf9a37edb2-8"></a><span class="nt">&lt;li&gt;&lt;a</span> <span class="na">class=</span><span class="s">"addthis_button_twitter"</span><span class="nt">&gt;&lt;/a&gt;</span>
-<a name="rest_code_f631ba0b6b484feaad9cabcf9a37edb2-9"></a><span class="nt">&lt;/ul&gt;</span>
-<a name="rest_code_f631ba0b6b484feaad9cabcf9a37edb2-10"></a><span class="nt">&lt;/div&gt;</span>
-<a name="rest_code_f631ba0b6b484feaad9cabcf9a37edb2-11"></a><span class="nt">&lt;script </span><span class="na">src=</span><span class="s">"//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4f7088a56bb93798"</span><span class="nt">&gt;&lt;/script&gt;</span>
-<a name="rest_code_f631ba0b6b484feaad9cabcf9a37edb2-12"></a><span class="c">&lt;!-- End of social buttons --&gt;</span>
-<a name="rest_code_f631ba0b6b484feaad9cabcf9a37edb2-13"></a>"""
+<pre class="code html"><a name="rest_code_8d6be99348b9439082f4ffd364cabd05-1"></a><span class="c">&lt;!-- Social buttons --&gt;</span>
+<a name="rest_code_8d6be99348b9439082f4ffd364cabd05-2"></a><span class="nt">&lt;div</span> <span class="na">id=</span><span class="s">"addthisbox"</span> <span class="na">class=</span><span class="s">"addthis_toolbox addthis_peekaboo_style</span>
+<a name="rest_code_8d6be99348b9439082f4ffd364cabd05-3"></a><span class="s">    addthis_default_style addthis_label_style addthis_32x32_style"</span><span class="nt">&gt;</span>
+<a name="rest_code_8d6be99348b9439082f4ffd364cabd05-4"></a><span class="nt">&lt;a</span> <span class="na">class=</span><span class="s">"addthis_button_more"</span><span class="nt">&gt;</span>Share<span class="nt">&lt;/a&gt;</span>
+<a name="rest_code_8d6be99348b9439082f4ffd364cabd05-5"></a><span class="nt">&lt;ul&gt;&lt;li&gt;&lt;a</span> <span class="na">class=</span><span class="s">"addthis_button_facebook"</span><span class="nt">&gt;&lt;/a&gt;</span>
+<a name="rest_code_8d6be99348b9439082f4ffd364cabd05-6"></a><span class="nt">&lt;li&gt;&lt;a</span> <span class="na">class=</span><span class="s">"addthis_button_google_plusone_share"</span><span class="nt">&gt;&lt;/a&gt;</span>
+<a name="rest_code_8d6be99348b9439082f4ffd364cabd05-7"></a><span class="nt">&lt;li&gt;&lt;a</span> <span class="na">class=</span><span class="s">"addthis_button_linkedin"</span><span class="nt">&gt;&lt;/a&gt;</span>
+<a name="rest_code_8d6be99348b9439082f4ffd364cabd05-8"></a><span class="nt">&lt;li&gt;&lt;a</span> <span class="na">class=</span><span class="s">"addthis_button_twitter"</span><span class="nt">&gt;&lt;/a&gt;</span>
+<a name="rest_code_8d6be99348b9439082f4ffd364cabd05-9"></a><span class="nt">&lt;/ul&gt;</span>
+<a name="rest_code_8d6be99348b9439082f4ffd364cabd05-10"></a><span class="nt">&lt;/div&gt;</span>
+<a name="rest_code_8d6be99348b9439082f4ffd364cabd05-11"></a><span class="nt">&lt;script </span><span class="na">src=</span><span class="s">"//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4f7088a56bb93798"</span><span class="nt">&gt;&lt;/script&gt;</span>
+<a name="rest_code_8d6be99348b9439082f4ffd364cabd05-12"></a><span class="c">&lt;!-- End of social buttons --&gt;</span>
+<a name="rest_code_8d6be99348b9439082f4ffd364cabd05-13"></a>"""
 </pre>
 <p>You can change that using the <tt class="docutils literal">SOCIAL_BUTTONS_CODE</tt> option in your conf.py. In some cases, just
 doing that will be enough but in others, it won't. This document tries to describe all the bits
@@ -225,20 +220,20 @@ $ nikola auto -b
 </pre>
 <p>First, let's add the HTML snippet that will show the sharing options. In your conf.py, set this, which
 is the HTML code suggested by ShareNice:</p>
-<pre class="code python"><a name="rest_code_1ac7e9c2c3a74feab832f8a26159bc38-1"></a><span class="n">SOCIAL_BUTTONS_CODE</span> <span class="o">=</span> <span class="s">"""&lt;div id="shareNice" data-share-label="Share"</span>
-<a name="rest_code_1ac7e9c2c3a74feab832f8a26159bc38-2"></a><span class="s">    data-color-scheme="black" data-icon-size="32" data-panel-bottom="plain"</span>
-<a name="rest_code_1ac7e9c2c3a74feab832f8a26159bc38-3"></a><span class="s">    data-services="plus.google.com,facebook.com,digg.com,email,delicious.com,twitter.com"</span>
-<a name="rest_code_1ac7e9c2c3a74feab832f8a26159bc38-4"></a><span class="s">    style="float:right"&gt;&lt;/div&gt;"""</span>
-<a name="rest_code_1ac7e9c2c3a74feab832f8a26159bc38-5"></a>
-<a name="rest_code_1ac7e9c2c3a74feab832f8a26159bc38-6"></a><span class="n">BODY_END</span> <span class="o">=</span> <span class="s">"""&lt;script src="http://graingert.co.uk/shareNice/code.js"&gt;&lt;/script&gt;"""</span>
+<pre class="code python"><a name="rest_code_e7759e2c31414938896bb84db4178ceb-1"></a><span class="n">SOCIAL_BUTTONS_CODE</span> <span class="o">=</span> <span class="s">"""&lt;div id="shareNice" data-share-label="Share"</span>
+<a name="rest_code_e7759e2c31414938896bb84db4178ceb-2"></a><span class="s">    data-color-scheme="black" data-icon-size="32" data-panel-bottom="plain"</span>
+<a name="rest_code_e7759e2c31414938896bb84db4178ceb-3"></a><span class="s">    data-services="plus.google.com,facebook.com,digg.com,email,delicious.com,twitter.com"</span>
+<a name="rest_code_e7759e2c31414938896bb84db4178ceb-4"></a><span class="s">    style="float:right"&gt;&lt;/div&gt;"""</span>
+<a name="rest_code_e7759e2c31414938896bb84db4178ceb-5"></a>
+<a name="rest_code_e7759e2c31414938896bb84db4178ceb-6"></a><span class="n">BODY_END</span> <span class="o">=</span> <span class="s">"""&lt;script src="http://graingert.co.uk/shareNice/code.js"&gt;&lt;/script&gt;"""</span>
 </pre>
 <p>And you should now see a sharing box at the bottom right of the page.</p>
 <p>Main problem remaining is that it doesn't really look good and integrated in the page layout.
 I suggest changing the code to this which looks nicer, but still has some placement issues:</p>
-<pre class="code python"><a name="rest_code_eb719876aae14b7e99b9f611536d2a9f-1"></a><span class="n">SOCIAL_BUTTONS_CODE</span> <span class="o">=</span> <span class="s">"""&lt;div id="shareNice" data-share-label="Share"</span>
-<a name="rest_code_eb719876aae14b7e99b9f611536d2a9f-2"></a><span class="s">    data-color-scheme="black" data-icon-size="32" data-panel-bottom="plain"</span>
-<a name="rest_code_eb719876aae14b7e99b9f611536d2a9f-3"></a><span class="s">    data-services="plus.google.com,facebook.com,email,twitter.com"</span>
-<a name="rest_code_eb719876aae14b7e99b9f611536d2a9f-4"></a><span class="s">    style="position: absolute; left: 20px; top: 60px;"&gt;&lt;/div&gt;"""</span>
+<pre class="code python"><a name="rest_code_784523b141e14c4d8d803ac792fec9a4-1"></a><span class="n">SOCIAL_BUTTONS_CODE</span> <span class="o">=</span> <span class="s">"""&lt;div id="shareNice" data-share-label="Share"</span>
+<a name="rest_code_784523b141e14c4d8d803ac792fec9a4-2"></a><span class="s">    data-color-scheme="black" data-icon-size="32" data-panel-bottom="plain"</span>
+<a name="rest_code_784523b141e14c4d8d803ac792fec9a4-3"></a><span class="s">    data-services="plus.google.com,facebook.com,email,twitter.com"</span>
+<a name="rest_code_784523b141e14c4d8d803ac792fec9a4-4"></a><span class="s">    style="position: absolute; left: 20px; top: 60px;"&gt;&lt;/div&gt;"""</span>
 </pre>
 <p>If anyone comes up with a better idea of styling/placement, just let me know ;-)</p>
 <p>One bad bit of this so far is that you are now using a script from another site, and that
@@ -286,16 +281,16 @@ $ cp -Rv SocialSharePrivacy-master/build/* files/
 $ cp -R SocialSharePrivacy-master/images/ files/assets/
 </pre>
 <p>Edit your <tt class="docutils literal">conf.py</tt>:</p>
-<pre class="code python"><a name="rest_code_0914c32938ff43f78e67c1cb19c5e84e-1"></a><span class="n">BODY_END</span> <span class="o">=</span> <span class="s">"""</span>
-<a name="rest_code_0914c32938ff43f78e67c1cb19c5e84e-2"></a><span class="s">&lt;script src="/javascripts/jquery.socialshareprivacy.min.js"&gt;&lt;/script&gt;</span>
-<a name="rest_code_0914c32938ff43f78e67c1cb19c5e84e-3"></a><span class="s">&lt;script&gt;</span>
-<a name="rest_code_0914c32938ff43f78e67c1cb19c5e84e-4"></a><span class="s">$(document).ready(function () {</span>
-<a name="rest_code_0914c32938ff43f78e67c1cb19c5e84e-5"></a><span class="s">    $('.share').socialSharePrivacy();</span>
-<a name="rest_code_0914c32938ff43f78e67c1cb19c5e84e-6"></a><span class="s">});</span>
-<a name="rest_code_0914c32938ff43f78e67c1cb19c5e84e-7"></a><span class="s">&lt;/script&gt;</span>
-<a name="rest_code_0914c32938ff43f78e67c1cb19c5e84e-8"></a><span class="s">"""</span>
-<a name="rest_code_0914c32938ff43f78e67c1cb19c5e84e-9"></a>
-<a name="rest_code_0914c32938ff43f78e67c1cb19c5e84e-10"></a><span class="n">SOCIAL_BUTTONS_CODE</span> <span class="o">=</span> <span class="s">"""&lt;div class="share"&gt;&lt;/div&gt;"""</span>
+<pre class="code python"><a name="rest_code_4323105387ce4b7582f3031927b49fe3-1"></a><span class="n">BODY_END</span> <span class="o">=</span> <span class="s">"""</span>
+<a name="rest_code_4323105387ce4b7582f3031927b49fe3-2"></a><span class="s">&lt;script src="/javascripts/jquery.socialshareprivacy.min.js"&gt;&lt;/script&gt;</span>
+<a name="rest_code_4323105387ce4b7582f3031927b49fe3-3"></a><span class="s">&lt;script&gt;</span>
+<a name="rest_code_4323105387ce4b7582f3031927b49fe3-4"></a><span class="s">$(document).ready(function () {</span>
+<a name="rest_code_4323105387ce4b7582f3031927b49fe3-5"></a><span class="s">    $('.share').socialSharePrivacy();</span>
+<a name="rest_code_4323105387ce4b7582f3031927b49fe3-6"></a><span class="s">});</span>
+<a name="rest_code_4323105387ce4b7582f3031927b49fe3-7"></a><span class="s">&lt;/script&gt;</span>
+<a name="rest_code_4323105387ce4b7582f3031927b49fe3-8"></a><span class="s">"""</span>
+<a name="rest_code_4323105387ce4b7582f3031927b49fe3-9"></a>
+<a name="rest_code_4323105387ce4b7582f3031927b49fe3-10"></a><span class="n">SOCIAL_BUTTONS_CODE</span> <span class="o">=</span> <span class="s">"""&lt;div class="share"&gt;&lt;/div&gt;"""</span>
 </pre>
 <p>In my experience this produces a broken, duplicate, semi-working thing. YMMV and if you make it work correctly, let me know how :-)</p>
 </div>
@@ -336,11 +331,7 @@ you have one.</p>
     </div>
 </div>
 
-            <script src="../assets/js/jquery.min.js"></script>
-            <script src="../assets/js/bootstrap.min.js"></script>
-            <script src="../assets/js/moment-with-locales.min.js"></script>
-            <script src="../assets/js/fancydates.js"></script>
-        <script src="../assets/js/jquery.colorbox-min.js"></script>
+            <script src="../assets/js/all-nocdn.js"></script>
     
 
     <script>$('a.image-reference:not(.islink)').colorbox({rel:"gal",maxWidth:"100%",maxHeight:"100%",scalePhotos:true});</script>
