fixed h1 link color

--- a/output/stories/slides-demo.html
+++ b/output/stories/slides-demo.html
@@ -73,13 +73,10 @@ article: http://ogp.me/ns/article#
             </li>
 </ul>
                 
-<!-- Custom search -->
-<form method="get" id="search" action="//duckduckgo.com/" class="navbar-form pull-right">
-<input type="hidden" name="sites" value="http://actin.io/">
-<input type="hidden" name="k8" value="#444444">
-<input type="hidden" name="k9" value="#D51920">
-<input type="hidden" name="kt" value="h">
-<input type="text" name="q" maxlength="255" placeholder="Search…" class="span" style="margin-top: 4px;width:100px;">
+<!-- Custom search with Google-->
+<form id="search" action="//www.google.com/search" method="get" class="navbar-form pull-right">
+<input type="hidden" name="q" value="site:http://actin.io/">
+<input type="text" name="q" maxlength="255" results="0" placeholder="Search" style="margin-top: 4px;width:100px;">
 <input type="submit" value="Go">
 </form>
 <!-- End of custom search -->
@@ -113,17 +110,17 @@ article: http://ogp.me/ns/article#
     <div class="e-content entry-content" itemprop="articleBody text">
     <div>
 <p>Nikola intends to let you do slideshows easily:</p>
-<div id="slides_380c9fdd8be648c4af1db47b92f6c266" class="carousel slide">
+<div id="slides_a81bfb5ddf734c49931cf58e7a684966" class="carousel slide">
     <ol class="carousel-indicators">
-            <li data-target="#slides_380c9fdd8be648c4af1db47b92f6c266" data-slide-to="0" class="active">
+            <li data-target="#slides_a81bfb5ddf734c49931cf58e7a684966" data-slide-to="0" class="active">
             </li>
-<li data-target="#slides_380c9fdd8be648c4af1db47b92f6c266" data-slide-to="1">
+<li data-target="#slides_a81bfb5ddf734c49931cf58e7a684966" data-slide-to="1">
             </li>
-<li data-target="#slides_380c9fdd8be648c4af1db47b92f6c266" data-slide-to="2">
+<li data-target="#slides_a81bfb5ddf734c49931cf58e7a684966" data-slide-to="2">
             </li>
-<li data-target="#slides_380c9fdd8be648c4af1db47b92f6c266" data-slide-to="3">
+<li data-target="#slides_a81bfb5ddf734c49931cf58e7a684966" data-slide-to="3">
             </li>
-<li data-target="#slides_380c9fdd8be648c4af1db47b92f6c266" data-slide-to="4">
+<li data-target="#slides_a81bfb5ddf734c49931cf58e7a684966" data-slide-to="4">
     </li>
 </ol>
     <div class="carousel-inner">
@@ -133,8 +130,8 @@ article: http://ogp.me/ns/article#
                 <div class="item"><img src="../galleries/demo/tesla_lightning1_lg.jpg" alt="" style="margin: 0 auto 0 auto;"></div>
                 <div class="item"><img src="../galleries/demo/tesla_tower1_lg.jpg" alt="" style="margin: 0 auto 0 auto;"></div>
     </div>
-    <a class="left carousel-control" href="slides-demo.html#slides_380c9fdd8be648c4af1db47b92f6c266" data-slide="prev"><span class="icon-prev"></span></a>
-    <a class="right carousel-control" href="slides-demo.html#slides_380c9fdd8be648c4af1db47b92f6c266" data-slide="next"><span class="icon-next"></span></a>
+    <a class="left carousel-control" href="slides-demo.html#slides_a81bfb5ddf734c49931cf58e7a684966" data-slide="prev"><span class="icon-prev"></span></a>
+    <a class="right carousel-control" href="slides-demo.html#slides_a81bfb5ddf734c49931cf58e7a684966" data-slide="next"><span class="icon-next"></span></a>
 </div>
 </div>
     </div>
