--- a/output/stories/social_buttons.html
+++ b/output/stories/social_buttons.html
@@ -91,13 +91,10 @@ By Default, the themes provided with Nikola will add to your pages a "slide in" 
             </li>
 </ul>
                 
-<!-- Custom search -->
-<form method="get" id="search" action="//duckduckgo.com/" class="navbar-form pull-right">
-<input type="hidden" name="sites" value="http://actin.io/">
-<input type="hidden" name="k8" value="#444444">
-<input type="hidden" name="k9" value="#D51920">
-<input type="hidden" name="kt" value="h">
-<input type="text" name="q" maxlength="255" placeholder="Search…" class="span" style="margin-top: 4px;width:100px;">
+<!-- Custom search with Google-->
+<form id="search" action="//www.google.com/search" method="get" class="navbar-form pull-right">
+<input type="hidden" name="q" value="site:http://actin.io/">
+<input type="text" name="q" maxlength="255" results="0" placeholder="Search" style="margin-top: 4px;width:100px;">
 <input type="submit" value="Go">
 </form>
 <!-- End of custom search -->
@@ -157,19 +154,19 @@ By Default, the themes provided with Nikola will add to your pages a "slide in" 
 <h2><a class="toc-backref" href="social_buttons.html#id1">The Default</a></h2>
 <p>By Default, the themes provided with Nikola will add to your pages a "slide in" widget at
 the bottom right of the page, provided by Addthis. This is the HTML code for that:</p>
-<pre class="code html"><a name="rest_code_154e4301bdf64954a2709cee0a3aa31c-1"></a><span class="c">&lt;!-- Social buttons --&gt;</span>
-<a name="rest_code_154e4301bdf64954a2709cee0a3aa31c-2"></a><span class="nt">&lt;div</span> <span class="na">id=</span><span class="s">"addthisbox"</span> <span class="na">class=</span><span class="s">"addthis_toolbox addthis_peekaboo_style</span>
-<a name="rest_code_154e4301bdf64954a2709cee0a3aa31c-3"></a><span class="s">    addthis_default_style addthis_label_style addthis_32x32_style"</span><span class="nt">&gt;</span>
-<a name="rest_code_154e4301bdf64954a2709cee0a3aa31c-4"></a><span class="nt">&lt;a</span> <span class="na">class=</span><span class="s">"addthis_button_more"</span><span class="nt">&gt;</span>Share<span class="nt">&lt;/a&gt;</span>
-<a name="rest_code_154e4301bdf64954a2709cee0a3aa31c-5"></a><span class="nt">&lt;ul&gt;&lt;li&gt;&lt;a</span> <span class="na">class=</span><span class="s">"addthis_button_facebook"</span><span class="nt">&gt;&lt;/a&gt;</span>
-<a name="rest_code_154e4301bdf64954a2709cee0a3aa31c-6"></a><span class="nt">&lt;li&gt;&lt;a</span> <span class="na">class=</span><span class="s">"addthis_button_google_plusone_share"</span><span class="nt">&gt;&lt;/a&gt;</span>
-<a name="rest_code_154e4301bdf64954a2709cee0a3aa31c-7"></a><span class="nt">&lt;li&gt;&lt;a</span> <span class="na">class=</span><span class="s">"addthis_button_linkedin"</span><span class="nt">&gt;&lt;/a&gt;</span>
-<a name="rest_code_154e4301bdf64954a2709cee0a3aa31c-8"></a><span class="nt">&lt;li&gt;&lt;a</span> <span class="na">class=</span><span class="s">"addthis_button_twitter"</span><span class="nt">&gt;&lt;/a&gt;</span>
-<a name="rest_code_154e4301bdf64954a2709cee0a3aa31c-9"></a><span class="nt">&lt;/ul&gt;</span>
-<a name="rest_code_154e4301bdf64954a2709cee0a3aa31c-10"></a><span class="nt">&lt;/div&gt;</span>
-<a name="rest_code_154e4301bdf64954a2709cee0a3aa31c-11"></a><span class="nt">&lt;script </span><span class="na">src=</span><span class="s">"//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4f7088a56bb93798"</span><span class="nt">&gt;&lt;/script&gt;</span>
-<a name="rest_code_154e4301bdf64954a2709cee0a3aa31c-12"></a><span class="c">&lt;!-- End of social buttons --&gt;</span>
-<a name="rest_code_154e4301bdf64954a2709cee0a3aa31c-13"></a>"""
+<pre class="code html"><a name="rest_code_c744660c75714345967270d40b5c08f0-1"></a><span class="c">&lt;!-- Social buttons --&gt;</span>
+<a name="rest_code_c744660c75714345967270d40b5c08f0-2"></a><span class="nt">&lt;div</span> <span class="na">id=</span><span class="s">"addthisbox"</span> <span class="na">class=</span><span class="s">"addthis_toolbox addthis_peekaboo_style</span>
+<a name="rest_code_c744660c75714345967270d40b5c08f0-3"></a><span class="s">    addthis_default_style addthis_label_style addthis_32x32_style"</span><span class="nt">&gt;</span>
+<a name="rest_code_c744660c75714345967270d40b5c08f0-4"></a><span class="nt">&lt;a</span> <span class="na">class=</span><span class="s">"addthis_button_more"</span><span class="nt">&gt;</span>Share<span class="nt">&lt;/a&gt;</span>
+<a name="rest_code_c744660c75714345967270d40b5c08f0-5"></a><span class="nt">&lt;ul&gt;&lt;li&gt;&lt;a</span> <span class="na">class=</span><span class="s">"addthis_button_facebook"</span><span class="nt">&gt;&lt;/a&gt;</span>
+<a name="rest_code_c744660c75714345967270d40b5c08f0-6"></a><span class="nt">&lt;li&gt;&lt;a</span> <span class="na">class=</span><span class="s">"addthis_button_google_plusone_share"</span><span class="nt">&gt;&lt;/a&gt;</span>
+<a name="rest_code_c744660c75714345967270d40b5c08f0-7"></a><span class="nt">&lt;li&gt;&lt;a</span> <span class="na">class=</span><span class="s">"addthis_button_linkedin"</span><span class="nt">&gt;&lt;/a&gt;</span>
+<a name="rest_code_c744660c75714345967270d40b5c08f0-8"></a><span class="nt">&lt;li&gt;&lt;a</span> <span class="na">class=</span><span class="s">"addthis_button_twitter"</span><span class="nt">&gt;&lt;/a&gt;</span>
+<a name="rest_code_c744660c75714345967270d40b5c08f0-9"></a><span class="nt">&lt;/ul&gt;</span>
+<a name="rest_code_c744660c75714345967270d40b5c08f0-10"></a><span class="nt">&lt;/div&gt;</span>
+<a name="rest_code_c744660c75714345967270d40b5c08f0-11"></a><span class="nt">&lt;script </span><span class="na">src=</span><span class="s">"//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4f7088a56bb93798"</span><span class="nt">&gt;&lt;/script&gt;</span>
+<a name="rest_code_c744660c75714345967270d40b5c08f0-12"></a><span class="c">&lt;!-- End of social buttons --&gt;</span>
+<a name="rest_code_c744660c75714345967270d40b5c08f0-13"></a>"""
 </pre>
 <p>You can change that using the <tt class="docutils literal">SOCIAL_BUTTONS_CODE</tt> option in your conf.py. In some cases, just
 doing that will be enough but in others, it won't. This document tries to describe all the bits
@@ -220,20 +217,20 @@ $ nikola auto -b
 </pre>
 <p>First, let's add the HTML snippet that will show the sharing options. In your conf.py, set this, which
 is the HTML code suggested by ShareNice:</p>
-<pre class="code python"><a name="rest_code_c5f8d7dcf97f42089a90eb8530749ece-1"></a><span class="n">SOCIAL_BUTTONS_CODE</span> <span class="o">=</span> <span class="s">"""&lt;div id="shareNice" data-share-label="Share"</span>
-<a name="rest_code_c5f8d7dcf97f42089a90eb8530749ece-2"></a><span class="s">    data-color-scheme="black" data-icon-size="32" data-panel-bottom="plain"</span>
-<a name="rest_code_c5f8d7dcf97f42089a90eb8530749ece-3"></a><span class="s">    data-services="plus.google.com,facebook.com,digg.com,email,delicious.com,twitter.com"</span>
-<a name="rest_code_c5f8d7dcf97f42089a90eb8530749ece-4"></a><span class="s">    style="float:right"&gt;&lt;/div&gt;"""</span>
-<a name="rest_code_c5f8d7dcf97f42089a90eb8530749ece-5"></a>
-<a name="rest_code_c5f8d7dcf97f42089a90eb8530749ece-6"></a><span class="n">BODY_END</span> <span class="o">=</span> <span class="s">"""&lt;script src="http://graingert.co.uk/shareNice/code.js"&gt;&lt;/script&gt;"""</span>
+<pre class="code python"><a name="rest_code_3ece77f44caf4c8e878674f97b1b1d8f-1"></a><span class="n">SOCIAL_BUTTONS_CODE</span> <span class="o">=</span> <span class="s">"""&lt;div id="shareNice" data-share-label="Share"</span>
+<a name="rest_code_3ece77f44caf4c8e878674f97b1b1d8f-2"></a><span class="s">    data-color-scheme="black" data-icon-size="32" data-panel-bottom="plain"</span>
+<a name="rest_code_3ece77f44caf4c8e878674f97b1b1d8f-3"></a><span class="s">    data-services="plus.google.com,facebook.com,digg.com,email,delicious.com,twitter.com"</span>
+<a name="rest_code_3ece77f44caf4c8e878674f97b1b1d8f-4"></a><span class="s">    style="float:right"&gt;&lt;/div&gt;"""</span>
+<a name="rest_code_3ece77f44caf4c8e878674f97b1b1d8f-5"></a>
+<a name="rest_code_3ece77f44caf4c8e878674f97b1b1d8f-6"></a><span class="n">BODY_END</span> <span class="o">=</span> <span class="s">"""&lt;script src="http://graingert.co.uk/shareNice/code.js"&gt;&lt;/script&gt;"""</span>
 </pre>
 <p>And you should now see a sharing box at the bottom right of the page.</p>
 <p>Main problem remaining is that it doesn't really look good and integrated in the page layout.
 I suggest changing the code to this which looks nicer, but still has some placement issues:</p>
-<pre class="code python"><a name="rest_code_cdc7dc7fd10446d2964c8b4136d923d2-1"></a><span class="n">SOCIAL_BUTTONS_CODE</span> <span class="o">=</span> <span class="s">"""&lt;div id="shareNice" data-share-label="Share"</span>
-<a name="rest_code_cdc7dc7fd10446d2964c8b4136d923d2-2"></a><span class="s">    data-color-scheme="black" data-icon-size="32" data-panel-bottom="plain"</span>
-<a name="rest_code_cdc7dc7fd10446d2964c8b4136d923d2-3"></a><span class="s">    data-services="plus.google.com,facebook.com,email,twitter.com"</span>
-<a name="rest_code_cdc7dc7fd10446d2964c8b4136d923d2-4"></a><span class="s">    style="position: absolute; left: 20px; top: 60px;"&gt;&lt;/div&gt;"""</span>
+<pre class="code python"><a name="rest_code_7b5e751858074eba8c30454116e71c9c-1"></a><span class="n">SOCIAL_BUTTONS_CODE</span> <span class="o">=</span> <span class="s">"""&lt;div id="shareNice" data-share-label="Share"</span>
+<a name="rest_code_7b5e751858074eba8c30454116e71c9c-2"></a><span class="s">    data-color-scheme="black" data-icon-size="32" data-panel-bottom="plain"</span>
+<a name="rest_code_7b5e751858074eba8c30454116e71c9c-3"></a><span class="s">    data-services="plus.google.com,facebook.com,email,twitter.com"</span>
+<a name="rest_code_7b5e751858074eba8c30454116e71c9c-4"></a><span class="s">    style="position: absolute; left: 20px; top: 60px;"&gt;&lt;/div&gt;"""</span>
 </pre>
 <p>If anyone comes up with a better idea of styling/placement, just let me know ;-)</p>
 <p>One bad bit of this so far is that you are now using a script from another site, and that
@@ -281,16 +278,16 @@ $ cp -Rv SocialSharePrivacy-master/build/* files/
 $ cp -R SocialSharePrivacy-master/images/ files/assets/
 </pre>
 <p>Edit your <tt class="docutils literal">conf.py</tt>:</p>
-<pre class="code python"><a name="rest_code_1e8f5a555dde4d24a562a7d5aa221c3d-1"></a><span class="n">BODY_END</span> <span class="o">=</span> <span class="s">"""</span>
-<a name="rest_code_1e8f5a555dde4d24a562a7d5aa221c3d-2"></a><span class="s">&lt;script src="/javascripts/jquery.socialshareprivacy.min.js"&gt;&lt;/script&gt;</span>
-<a name="rest_code_1e8f5a555dde4d24a562a7d5aa221c3d-3"></a><span class="s">&lt;script&gt;</span>
-<a name="rest_code_1e8f5a555dde4d24a562a7d5aa221c3d-4"></a><span class="s">$(document).ready(function () {</span>
-<a name="rest_code_1e8f5a555dde4d24a562a7d5aa221c3d-5"></a><span class="s">    $('.share').socialSharePrivacy();</span>
-<a name="rest_code_1e8f5a555dde4d24a562a7d5aa221c3d-6"></a><span class="s">});</span>
-<a name="rest_code_1e8f5a555dde4d24a562a7d5aa221c3d-7"></a><span class="s">&lt;/script&gt;</span>
-<a name="rest_code_1e8f5a555dde4d24a562a7d5aa221c3d-8"></a><span class="s">"""</span>
-<a name="rest_code_1e8f5a555dde4d24a562a7d5aa221c3d-9"></a>
-<a name="rest_code_1e8f5a555dde4d24a562a7d5aa221c3d-10"></a><span class="n">SOCIAL_BUTTONS_CODE</span> <span class="o">=</span> <span class="s">"""&lt;div class="share"&gt;&lt;/div&gt;"""</span>
+<pre class="code python"><a name="rest_code_1a7067e3d24a4161acbaac45f750f8bb-1"></a><span class="n">BODY_END</span> <span class="o">=</span> <span class="s">"""</span>
+<a name="rest_code_1a7067e3d24a4161acbaac45f750f8bb-2"></a><span class="s">&lt;script src="/javascripts/jquery.socialshareprivacy.min.js"&gt;&lt;/script&gt;</span>
+<a name="rest_code_1a7067e3d24a4161acbaac45f750f8bb-3"></a><span class="s">&lt;script&gt;</span>
+<a name="rest_code_1a7067e3d24a4161acbaac45f750f8bb-4"></a><span class="s">$(document).ready(function () {</span>
+<a name="rest_code_1a7067e3d24a4161acbaac45f750f8bb-5"></a><span class="s">    $('.share').socialSharePrivacy();</span>
+<a name="rest_code_1a7067e3d24a4161acbaac45f750f8bb-6"></a><span class="s">});</span>
+<a name="rest_code_1a7067e3d24a4161acbaac45f750f8bb-7"></a><span class="s">&lt;/script&gt;</span>
+<a name="rest_code_1a7067e3d24a4161acbaac45f750f8bb-8"></a><span class="s">"""</span>
+<a name="rest_code_1a7067e3d24a4161acbaac45f750f8bb-9"></a>
+<a name="rest_code_1a7067e3d24a4161acbaac45f750f8bb-10"></a><span class="n">SOCIAL_BUTTONS_CODE</span> <span class="o">=</span> <span class="s">"""&lt;div class="share"&gt;&lt;/div&gt;"""</span>
 </pre>
 <p>In my experience this produces a broken, duplicate, semi-working thing. YMMV and if you make it work correctly, let me know how :-)</p>
 </div>
